--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
+---
+import { languageTag } from "../paraglide/runtime";
+---
 <!doctype html>
-<html lang="en">
+<html lang={languageTag()} dir={Astro.locals.paraglide.dir}>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -11,12 +14,3 @@
 		<slot />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
