--- a/src/pages/[lang]/faq.astro
+++ b/src/pages/[lang]/faq.astro
@@ -1,5 +1,5 @@
 ---
-import Welcome from '../../components/StartTest.astro';
+import FAQ from '../../components/Faq.astro';
 import Layout from '../../layouts/Layout.astro';
 import config from '../../../astro.config.mjs';
 
@@ -17,5 +17,5 @@ export function getStaticPaths () {
 ---
 
 <Layout>
-	<Welcome />
+	<FAQ />
 </Layout>
