--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -1,8 +1,8 @@
 ---
-import Welcome from '../components/StartTest.astro';
+import FAQ from '../components/Faq.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<FAQ />
 </Layout>
